<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <Switch
        android:id="@+id/musicOnOff"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:text="@string/music"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.426" />

    <SeekBar
        android:id="@+id/volumeBar"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicOnOff"
        app:layout_constraintVertical_bias="0.415" />

    <TextView
        android:id="@+id/volume"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/volume"
        app:layout_constraintBottom_toTopOf="@+id/volumeBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicOnOff"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/share"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/volumeBar"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>